# mining_rig_server

./: mining_arcadex.db
src/: main.rs
static/: index.html
static/css/: logo.css
static/js/: events.js  main.js
v1/: .env  .gitignore  Cargo.toml  mining_arcadex.db
v1/src/: main.rs
v1/src/handlers/: farm.rs  gpu.rs  handler_frontend.rs  handler_rig.rs  mod.rs  rig.rs  server_websocket.rs  websocket_handler.rs  ws_frontend.rs  ws_rig.rs
v1/static/: index.html
v1/static/css/: logo.css  style.css
v1/static/js/: events.js  main.js  ws_functions.js
