[package]
name = "mining_arcadex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-web-actors = "4.0"
actix = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.18" # Add this for WebSocket handling
tokio-tungstenite = "0.15.0" # Add this for WebSocket handling
url = "2.2.2" # Add this for URL handling